--- a/PB/test-data/test-install-folder/svg-templates/9-The-Ninth-Nexus.template
+++ b/PB/test-data/test-install-folder/svg-templates/9-The-Ninth-Nexus.template
@@ -26,13 +26,13 @@
   <mask id="svgmask8">
     <polygon fill="#ffffff" points="{{2 * width / 3}} {{2 * height / 3}}, {{3 * width / 3}} {{2 * height / 3}}, {{3 * width / 3}} {{3 * height / 3}}, {{2 * width / 3}} {{3 * height / 3}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{0 * width / 3}}" y="{{0 * height / 3}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{1 * width / 3}}" y="{{0 * height / 3}}"></image>
-  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{2 * width / 3}}" y="{{0 * height / 3}}"></image>
-  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{0 * width / 3}}" y="{{1 * height / 3}}"></image>
-  <image xlink:href="{{image_4}}" mask="url(#svgmask4)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{1 * width / 3}}" y="{{1 * height / 3}}"></image>
-  <image xlink:href="{{image_5}}" mask="url(#svgmask5)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{2 * width / 3}}" y="{{1 * height / 3}}"></image>
-  <image xlink:href="{{image_6}}" mask="url(#svgmask6)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{0 * width / 3}}" y="{{2 * height / 3}}"></image>
-  <image xlink:href="{{image_7}}" mask="url(#svgmask7)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{1 * width / 3}}" y="{{2 * height / 3}}"></image>
-  <image xlink:href="{{image_8}}" mask="url(#svgmask8)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{2 * width / 3}}" y="{{2 * height / 3}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{0 * width / 3}}" y="{{0 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{1 * width / 3}}" y="{{0 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{2 * width / 3}}" y="{{0 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{0 * width / 3}}" y="{{1 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_4}}" mask="url(#svgmask4)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{1 * width / 3}}" y="{{1 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_5}}" mask="url(#svgmask5)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{2 * width / 3}}" y="{{1 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_6}}" mask="url(#svgmask6)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{0 * width / 3}}" y="{{2 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_7}}" mask="url(#svgmask7)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{1 * width / 3}}" y="{{2 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_8}}" mask="url(#svgmask8)" width="{{1 * width / 3}}" height="{{1 * height / 3}}" x="{{2 * width / 3}}" y="{{2 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
