--- a/PB/test-data/test-install-folder/svg-templates/2-The-Magnificent-Duo.template
+++ b/PB/test-data/test-install-folder/svg-templates/2-The-Magnificent-Duo.template
@@ -5,6 +5,6 @@
   <mask id="svgmask1">
     <polygon fill="#ffffff" points="{{1 * width / 2}} {{0 * height / 1}}, {{2 * width / 2}} {{0 * height / 1}}, {{2 * width / 2}} {{1 * height / 1}}, {{1 * width / 2}} {{1 * height / 1}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 2}}" height="{{1 * height / 1}}" x="{{0 * width / 2}}" y="{{0 * height / 1}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 2}}" height="{{1 * height / 1}}" x="{{1 * width / 2}}" y="{{0 * height / 1}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 2}}" height="{{1 * height / 1}}" x="{{0 * width / 2}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 2}}" height="{{1 * height / 1}}" x="{{1 * width / 2}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
