--- a/PB/test-data/test-install-folder/svg-templates/3-The-Triad-of-Wonder.template
+++ b/PB/test-data/test-install-folder/svg-templates/3-The-Triad-of-Wonder.template
@@ -8,7 +8,7 @@
   <mask id="svgmask2">
     <polygon fill="#ffffff" points="{{0 * width / 1}} {{2 * height / 3}}, {{1 * width / 1}} {{2 * height / 3}}, {{1 * width / 1}} {{3 * height / 3}}, {{0 * width / 1}} {{3 * height / 3}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 1}}" height="{{1 * height / 3}}" x="{{0 * width / 1}}" y="{{0 * height / 3}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 1}}" height="{{1 * height / 3}}" x="{{0 * width / 1}}" y="{{1 * height / 3}}"></image>
-  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 1}}" height="{{1 * height / 3}}" x="{{0 * width / 1}}" y="{{2 * height / 3}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 1}}" height="{{1 * height / 3}}" x="{{0 * width / 1}}" y="{{0 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 1}}" height="{{1 * height / 3}}" x="{{0 * width / 1}}" y="{{1 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 1}}" height="{{1 * height / 3}}" x="{{0 * width / 1}}" y="{{2 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
