--- a/osx/PhotoBook/pb-assets/svg-templates/3-The-Trinity-of-Whim.template
+++ b/osx/PhotoBook/pb-assets/svg-templates/3-The-Trinity-of-Whim.template
@@ -8,7 +8,7 @@
   <mask id="svgmask2">
     <polygon fill="#ffffff" points="{{2 * width / 3}} {{0 * height / 1}}, {{3 * width / 3}} {{0 * height / 1}}, {{3 * width / 3}} {{1 * height / 1}}, {{2 * width / 3}} {{1 * height / 1}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 3}}" height="{{1 * height / 1}}" x="{{0 * width / 3}}" y="{{0 * height / 1}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 3}}" height="{{1 * height / 1}}" x="{{1 * width / 3}}" y="{{0 * height / 1}}"></image>
-  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 3}}" height="{{1 * height / 1}}" x="{{2 * width / 3}}" y="{{0 * height / 1}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 3}}" height="{{1 * height / 1}}" x="{{0 * width / 3}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 3}}" height="{{1 * height / 1}}" x="{{1 * width / 3}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 3}}" height="{{1 * height / 1}}" x="{{2 * width / 3}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
