--- a/osx/PhotoBook/pb-assets/svg-templates/4-The-Cornerstone-Quartet.template
+++ b/osx/PhotoBook/pb-assets/svg-templates/4-The-Cornerstone-Quartet.template
@@ -11,8 +11,8 @@
   <mask id="svgmask3">
     <polygon fill="#ffffff" points="{{3 * width / 4}} {{0 * height / 1}}, {{4 * width / 4}} {{0 * height / 1}}, {{4 * width / 4}} {{1 * height / 1}}, {{3 * width / 4}} {{1 * height / 1}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{0 * width / 4}}" y="{{0 * height / 1}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{1 * width / 4}}" y="{{0 * height / 1}}"></image>
-  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{2 * width / 4}}" y="{{0 * height / 1}}"></image>
-  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{3 * width / 4}}" y="{{0 * height / 1}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{0 * width / 4}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{1 * width / 4}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{2 * width / 4}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 4}}" height="{{1 * height / 1}}" x="{{3 * width / 4}}" y="{{0 * height / 1}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
