--- a/osx/PhotoBook/pb-assets/svg-templates/4-The-Quadrant-Keepers.template
+++ b/osx/PhotoBook/pb-assets/svg-templates/4-The-Quadrant-Keepers.template
@@ -11,8 +11,8 @@
   <mask id="svgmask3">
     <polygon fill="#ffffff" points="{{1 * width / 2}} {{1 * height / 2}}, {{2 * width / 2}} {{1 * height / 2}}, {{2 * width / 2}} {{2 * height / 2}}, {{1 * width / 2}} {{2 * height / 2}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{0 * width / 2}}" y="{{0 * height / 2}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{1 * width / 2}}" y="{{0 * height / 2}}"></image>
-  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{0 * width / 2}}" y="{{1 * height / 2}}"></image>
-  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{1 * width / 2}}" y="{{1 * height / 2}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{0 * width / 2}}" y="{{0 * height / 2}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{1 * width / 2}}" y="{{0 * height / 2}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{0 * width / 2}}" y="{{1 * height / 2}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 2}}" height="{{1 * height / 2}}" x="{{1 * width / 2}}" y="{{1 * height / 2}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
