--- a/osx/PhotoBook/pb-assets/svg-templates/4-The-Tetraforge-Brotherhood.template
+++ b/osx/PhotoBook/pb-assets/svg-templates/4-The-Tetraforge-Brotherhood.template
@@ -11,8 +11,8 @@
   <mask id="svgmask3">
     <polygon fill="#ffffff" points="{{0 * width / 1}} {{3 * height / 4}}, {{1 * width / 1}} {{3 * height / 4}}, {{1 * width / 1}} {{4 * height / 4}}, {{0 * width / 1}} {{4 * height / 4}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{0 * height / 4}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{1 * height / 4}}"></image>
-  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{2 * height / 4}}"></image>
-  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{3 * height / 4}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{0 * height / 4}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{1 * height / 4}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{2 * height / 4}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 1}}" height="{{1 * height / 4}}" x="{{0 * width / 1}}" y="{{3 * height / 4}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
