--- a/osx/PhotoBook/pb-assets/svg-templates/6-The-Hexa-Howl.template
+++ b/osx/PhotoBook/pb-assets/svg-templates/6-The-Hexa-Howl.template
@@ -17,10 +17,10 @@
   <mask id="svgmask5">
     <polygon fill="#ffffff" points="{{1 * width / 2}} {{2 * height / 3}}, {{2 * width / 2}} {{2 * height / 3}}, {{2 * width / 2}} {{3 * height / 3}}, {{1 * width / 2}} {{3 * height / 3}}"></polygon>
   </mask>
-  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{0 * width / 2}}" y="{{0 * height / 3}}"></image>
-  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{1 * width / 2}}" y="{{0 * height / 3}}"></image>
-  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{0 * width / 2}}" y="{{1 * height / 3}}"></image>
-  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{1 * width / 2}}" y="{{1 * height / 3}}"></image>
-  <image xlink:href="{{image_4}}" mask="url(#svgmask4)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{0 * width / 2}}" y="{{2 * height / 3}}"></image>
-  <image xlink:href="{{image_5}}" mask="url(#svgmask5)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{1 * width / 2}}" y="{{2 * height / 3}}"></image>
+  <image xlink:href="{{image_0}}" mask="url(#svgmask0)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{0 * width / 2}}" y="{{0 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_1}}" mask="url(#svgmask1)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{1 * width / 2}}" y="{{0 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_2}}" mask="url(#svgmask2)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{0 * width / 2}}" y="{{1 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_3}}" mask="url(#svgmask3)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{1 * width / 2}}" y="{{1 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_4}}" mask="url(#svgmask4)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{0 * width / 2}}" y="{{2 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
+  <image xlink:href="{{image_5}}" mask="url(#svgmask5)" width="{{1 * width / 2}}" height="{{1 * height / 3}}" x="{{1 * width / 2}}" y="{{2 * height / 3}}"  preserveAspectRatio="xMidYMid slice"></image>
 </svg>
